added right click

--- a/scripts/xorg.conf
+++ b/scripts/xorg.conf
@@ -44,4 +44,8 @@ Section "InputClass"
         MatchProduct    "1c25000.rtp"
         Option  "Calibration"   "3947 30 3737 217"
         Option  "SwapAxes"      "0"
+	
+	Option "EmulateThirdButton" "1"
+	Option "EmulateThirdButtonTimeout" "750"
+	Option "EmulateThirdButtonMoveThreshold" "30"
 EndSection
